--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -28,7 +28,7 @@
   <title>React App</title>
 </head>
 
-<body style="background-color: #C0C0C0;">
+<body style="background-color: #6495ed;">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
